Added first implem of persistence layer.